Changes made to user controller and user service Impl.